2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Structured main menu.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* options/KeyBindingSchemeEmacs.xml,
	  options/KeyBindingSchemeVisualStudio.xml,
	  options/KeyBindingSchemeDefault.xml: Fixed key binding sheme.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IEditable.cs,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Implemented Bug 323946 -
	  Undo/Redo functionality are not context sensitive.
	* MonoDevelop.Ide.mdp: Renamed MonoDevelop.Dom namespace to
	  MonoDevelop.Ide.Dom

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Dom.Parser/IParser.cs, MonoDevelop.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Dom.Output/Ambience.cs,
	  MonoDevelop.Dom.Output/NetAmbience.cs, MonoDevelop.Dom/IMember.cs,
	  MonoDevelop.Dom/DomReturnType.cs, MonoDevelop.Dom/DomType.cs,
	  MonoDevelop.Dom/TypeParameter.cs, MonoDevelop.Dom/ParameterModifiers.cs,
	  MonoDevelop.Dom/DomRegion.cs, MonoDevelop.Dom/DomUsing.cs,
	  MonoDevelop.Dom/Error.cs, MonoDevelop.Dom/IMethod.cs,
	  MonoDevelop.Dom/IProperty.cs, MonoDevelop.Dom/IUsing.cs,
	  MonoDevelop.Dom/Comment.cs, MonoDevelop.Dom/DomAttribute.cs,
	  MonoDevelop.Dom/IDomItem.cs, MonoDevelop.Dom/ClassType.cs,
	  MonoDevelop.Dom/IDomVisitor.cs, MonoDevelop.Dom/IAttribute.cs,
	  MonoDevelop.Dom/DomMethod.cs, MonoDevelop.Dom/DomParameter.cs,
	  MonoDevelop.Dom/Modifiers.cs, MonoDevelop.Dom/DomEvent.cs,
	  MonoDevelop.Dom/AbstractDomItem.cs, MonoDevelop.Dom/DomField.cs,
	  MonoDevelop.Dom/DomProperty.cs, MonoDevelop.Dom/ICompilationUnit.cs,
	  MonoDevelop.Dom/IParameter.cs, MonoDevelop.Dom/IReturnType.cs,
	  MonoDevelop.Dom/IType.cs, MonoDevelop.Dom/IEvent.cs,
	  MonoDevelop.Dom/AbstractMember.cs, MonoDevelop.Dom/IField.cs,
	  MonoDevelop.Dom/CommentType.cs, MonoDevelop.Dom/AttributeTarget.cs,