@@ -46,8 +46,7 @@ namespace MonoDevelop.Ide.Commands
 		Undo,
 		Redo,
 		SelectAll,
-		CommentCode,
-		UncommentCode,
+		ToggleCodeComment,
 		IndentSelection,
 		UnIndentSelection,
 		UppercaseSelection,
